wallet_core/lib/error_category/error_category_derive/tests/sentry_capture_error/fail_on_const.stderr
error: attribute macro `sentry_capture_error` not supported here
 --> tests/sentry_capture_error/fail_on_const.rs:4:1
  |
4 | const FOO: &str = "str";
  | ^^^^^
