wallet_core/lib/error_category/error_category_derive/tests/sentry_capture_error/fail_on_const.rs
use error_category::sentry_capture_error;

#[sentry_capture_error]
const FOO: &str = "str";

fn main() {}
